Add apache httpclient dependency and add call to Request.Get() IN AN UNCALLED METHOD. Now the RPC implementation is not available!

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -29,6 +29,12 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
       <version>${project.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient-osgi</artifactId>
+      <version>4.5.2</version>
+    </dependency>
+
     <!-- Testing Dependencies -->
     <dependency>
       <groupId>junit</groupId>
